results/scraper/launchpad/1568356
ERROR:ui/sdl2-2d.c:120:sdl2_2d_switch:

when display sdl is selected  in display switch resolution qemu exit with a core dump with this message


ERROR:ui/sdl2-2d.c:120:sdl2_2d_switch: code should not be reached

My Machine is a Cyrus+ PowerPc P5020 4gb ram Radeon 6570 2Gb

This issue affected PowerMac G5 quad too .

My distro is Mate 16.04

Could you add a debug printf before that assert statement in the code to see which format is missing here? So that the default case looks like:

    default:
        printf("Surface format is: %x\n", surface_format(scon->surface));
        g_assert_not_reached();


Hi T.
i had been add the code line but cc exit with error and dont buil

CC    ui/console-gl.o
ui/console-gl.c: In function ‘surface_gl_create_texture’:
ui/console-gl.c:96:52: error: ‘scon’ undeclared (first use in this function)
   printf("Surface format is: %x\n", surface_format(scon->surface));
                                                    ^
ui/console-gl.c:96:52: note: each undeclared identifier is reported only once for each function it appears in
/home/amigaone/src/qemu/rules.mak:57: recipe for target 'ui/console-gl.o' failed
make: *** [ui/console-gl.o] Error 1
make: *** Waiting for unfinished jobs....


You've apparently added it to console-gl.c ... your original description was about sdl2-2d.c, so please add the code there. In console-gl.c, you could use this statement instead:

  printf("gl Surface format is: %x\n", surface->format);

I just noticed that somebody submitted a related patch recently:

https://lists.gnu.org/archive/html/qemu-devel/2016-05/msg02702.html

Could you please check whether this fixes your issue here with sdl2-2d.c, too?

Hi T.
I been installed the patch . 
note im testing the fedora 24 and the last mate 16.10 
on fedora 24  qemu 2.6 all build ok but when i run the qemu i have an illegal istruction and the crash of qemu... dont worry about im sure is not a qemu issue but some unstable library on fedora because this is effecting all sdl software.

On mate 16.10 qemu 2.6 is not building at all  i had been reported the issue about .
I cant say if the patch is working or not since the two distro will be more stable.

i will check later if the oldest qemu 2.5.x with the applied patch  will build on mate 16 and hope gave a positive feedback.

Luigi

Hi T,
i can confirm the patch is working . sdl2 switch screen is fixed .
i had been tested it on 2.5.1 and is ok.
I think will be better add this in the qemu git 

next step sdl gl ;-)
Many thanks
Luigi

Looking at the changelog, the patch has been pull in yesterday:
http://git.qemu.org/?p=qemu.git;a=commitdiff;h=435deffefbb07d9a0cafef4
So marking this bug as fixed.

Commit 435deffefbb07d9a0cafef4 has been released with QEMU v2.7.0 already

